Address comments, fix modal opening on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ a {
   right: 25px;
   bottom: 20px;
   position: fixed;
+  z-index: 10;
 }
 
 .social-link {
@@ -171,8 +172,8 @@ a {
 
 .heading-description p {
   margin-bottom: 20px;
-  line-height: 1.4;
-  font-size: 24px;
+  line-height: 1.45;
+  font-size: 25px;
 }
 
 .exhibits {
@@ -193,6 +194,15 @@ a {
 
 .exhibit:hover {
   cursor: pointer;
+}
+
+.exhibit-text {
+  transition-property: color;
+  transition-duration: 0.4s;
+}
+
+.exhibit:hover .exhibit-text {
+  color: #333333;
 }
 
 .exhibit-number {
@@ -322,6 +332,12 @@ a {
   position: relative;
 }
 
+.amplify-logo-modal {
+  width: 250px;
+  top: -10px;
+  position: relative;
+}
+
 .cisc-logo {
   width: 260px;
 }
@@ -349,7 +365,7 @@ a {
 }
 
 .modal-opened {
-  max-height: 1500px;
+  max-height: 1700px;
 }
 
 .modal-content {
@@ -358,8 +374,8 @@ a {
 
 .modal-body {
   padding-top: 80px;
-  font-size: 24px;
-  line-height: 1.4;
+  font-size: 25px;
+  line-height: 1.45;
 }
 
 .modal-section {
@@ -398,8 +414,13 @@ a {
 }
 
 .modal-logos {
-  padding: 80px 0;
+  padding-top: 80px;
+  padding-bottom: 40px;
   border-bottom: 1px solid black;
+}
+
+.modal-logo {
+  margin-bottom: 40px;
 }
 
 .modal-credit {
@@ -672,7 +693,7 @@ a {
   }
 
   .social-links {
-    right: 10px;
+    right: 14px;
   }
 
   .social-link {
